
[workspace]

members = [
  "src/batsmt-core",
  "src/batsmt-cc",
  "src/batsmt-run",
  "src/batsmt-parser",
]

default-members = [
  "src/batsmt-core",
  "src/batsmt-cc",
  "src/batsmt-run",
  "src/batsmt-parser",
]

[profile.release]
opt-level = 3
lto = true # helps a lot with inlining

# for `perf`:
# debug = true 

[profile.dev]
opt-level = 1
