[package]
name = "batsmt-cc"
version = "0.1.0"
authors = ["Simon Cruanes <simon.cruanes.2007@m4x.org>"]
edition = "2018"

[dependencies]

batsmt-core = { path="../core" }
batsmt-pretty = { path="../pretty" }
batsmt-theory = { path="../theory" }
smallvec = "^0.6"
fxhash = "^0.2"
log = "0.4"

[features]

default = []
#default = ["naive"]
naive = []
