[package]
name = "batsmt-core"
version = "0.1.0"
authors = ["Simon Cruanes <simon.cruanes.2007@m4x.org>"]
edition = "2018"

[dependencies]

batsat = { git="https://github.com/c-cube/batsat", version = "^0.2"}
bit-set = "0.5.0"
log = "0.4"
fxhash = "^0.2.1"
smallvec = "0.6"
batsmt-pretty = { path = "../pretty" }
