[package]
name = "batsmt-parser"
version = "0.1.0"
authors = ["Simon Cruanes <simon.cruanes.2007@m4x.org>"]
edition = "2018"

[dependencies]

log = "^0.4"
fxhash = "0.2"
batsmt-pretty = {path = "../pretty"}

[[example]]

name = "smtcat"

[dev-dependencies]

batsmt-logger = {path = "../logger"} # for the example
