[package]
name = "batsmt-run"
version = "0.1.0"
authors = ["Simon Cruanes <simon.cruanes.2007@m4x.org>"]

[dependencies]

batsmt-core = {path = "../core"}
batsmt-solver = {path = "../solver"}
batsmt-cc = {path = "../cc"}
batsmt-parser = {path = "../parser"}
batsmt-pretty = {path = "../pretty"}
batsmt-tseitin = {path = "../tseitin"}
log = "^0.4"
env_logger = "0.5"
fxhash = "0.2"
