[package]
name = "batsmt-run"
version = "0.1.0"
authors = ["Simon Cruanes <simon.cruanes.2007@m4x.org>"]
edition = "2018"

[dependencies]

batsmt-core = {path = "../core"}
batsmt-hast = {path = "../hast"}
batsmt-solver = {path = "../solver"}
batsmt-theory = {path = "../theory"}
batsmt-cc = {path = "../cc"}
batsmt-parser = {path = "../parser"}
batsmt-pretty = {path = "../pretty"}
batsmt-tseitin = {path = "../tseitin"}
log = "^0.4"
batsmt-logger = {path = "../logger"}
fxhash = "0.2"
bit-set = "0.5.0"
