[package]
name = "batsmt-solver"
version = "0.1.0"
authors = ["Simon Cruanes <simon.cruanes.2007@m4x.org>"]
edition = "2018"

[dependencies]

batsmt-core = { path = "../core" }
batsmt-pretty = { path = "../pretty" }
batsat = { git="https://github.com/c-cube/batsat", version = "^0.2", features=["logging"] }
smallvec = "0.6"
log = "0.4"
